# bifacialvf

./: pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yaml  pytest.yaml
bifacialvf/: bifacialvf.py  loadVFresults.py  vf.py
bifacialvf/data/: Golden_CO_nsrdb-GOES-30.csv
bifacialvf/tests/: test_bifacialvf.py
docs/sphinx/source/: conf.py  whatsnew.rst
docs/sphinx/source/whatsnew/: v020.rst  v1.8.rst
